--- a/ProyectoFinal/blog/templates/blog/index.html
+++ b/ProyectoFinal/blog/templates/blog/index.html
@@ -126,7 +126,7 @@
 
                         {% csrf_token %}
 
-                                    <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                                    <input class="form-control" type="text" placeholder="Buscar post..." aria-label="Buscar post..." aria-describedby="button-search" name="searched" />
                                     <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
 
                     </form>
