Searchbar moved to the navbar

--- a/ProyectoFinal/blog/templates/blog/index.html
+++ b/ProyectoFinal/blog/templates/blog/index.html
@@ -28,6 +28,14 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
                     </ul>
+                    <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
+
+                        {% csrf_token %}
+
+                                    <input class="form-control" type="text" placeholder="Buscar post..." aria-label="Buscar post..." aria-describedby="button-search" name="searched" />
+                                    <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
+
+                    </form>
                 </div>
                 
     </div>
@@ -45,12 +53,12 @@
 {% endfor %}
 </ul>
 <!-- Page content-->
-<div class="container">
-    <div class="row">
+<!-- <div class="container">
+    <div class="row"> -->
         <!-- Blog entries-->
-        <div class="col-lg-8">
+        <!-- <div class="col-lg-8"> -->
             <!-- Featured blog post-->
-            <div class="card mb-4">
+            <!-- <div class="card mb-4">
                 <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
                 <div class="card-body">
                     <div class="small text-muted">January 1, 2021</div>
@@ -58,12 +66,12 @@
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
                     <a class="btn btn-primary" href="#!">Read more →</a>
                 </div>
-            </div>
+            </div> -->
             <!-- Nested row for non-featured blog posts-->
-            <div class="row">
-                <div class="col-lg-6">
+            <!-- <div class="row">
+                <div class="col-lg-6"> -->
                     <!-- Blog post-->
-                    <div class="card mb-4">
+                    <!-- <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
                             <div class="small text-muted">January 1, 2021</div>
@@ -71,9 +79,9 @@
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                             <a class="btn btn-primary" href="#!">Read more →</a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Blog post-->
-                    <div class="card mb-4">
+                    <!-- <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
                             <div class="small text-muted">January 1, 2021</div>
@@ -83,9 +91,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6"> -->
                     <!-- Blog post-->
-                    <div class="card mb-4">
+                    <!-- <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
                             <div class="small text-muted">January 1, 2021</div>
@@ -93,9 +101,9 @@
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                             <a class="btn btn-primary" href="#!">Read more →</a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Blog post-->
-                    <div class="card mb-4">
+                    <!-- <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
                             <div class="small text-muted">January 1, 2021</div>
@@ -105,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Pagination-->
             <nav aria-label="Pagination">
                 <hr class="my-0" />
@@ -126,16 +134,16 @@
 {% block search %}
 
                 <!-- Side widgets-->
-                <div class="col-lg-4">
+                <!-- <div class="col-lg-4"> -->
                     <!-- Search widget-->
-                    <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
+                    <!-- <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
 
                         {% csrf_token %}
 
                                     <input class="form-control" type="text" placeholder="Buscar post..." aria-label="Buscar post..." aria-describedby="button-search" name="searched" />
                                     <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
 
-                    </form>
+                    </form> -->
                     <!-- <div class="card mb-4">
                         <div class="card-header">Search</div>
                         <div class="card-body">
@@ -147,7 +155,7 @@
                     </div> -->
                     
 
-                </div>
+                <!-- </div> -->
 
 {% endblock search %}
 
