--- a/ProyectoFinal/blog/templates/blog/index.html
+++ b/ProyectoFinal/blog/templates/blog/index.html
@@ -47,16 +47,26 @@
 <ul>
 {% for post in object_list %}
 
-<li><a href="{% url 'post-details' post.pk %}">{{post.title}}</a> <br/> 
-    
-</li>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8">
+<div class="card mb-4">
+    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+    <div class="card-body">
+        <div class="small text-muted">{{post.created_date}}</div>
+        <h2 class="card-title h4">{{post.title}}</h2>
+        <p class="card-text">{{post.content|truncatechars:100}}</p>
+        <a class="btn btn-primary" href="{% url 'post-details' post.slug  %}">Mas info →</a>
+    </div>
+</div> 
+</div>
 {% endfor %}
 </ul>
 <!-- Page content-->
-<!-- <div class="container">
-    <div class="row"> -->
+<div class="container">
+    <div class="row">
         <!-- Blog entries-->
-        <!-- <div class="col-lg-8"> -->
+        <div class="col-lg-8">
             <!-- Featured blog post-->
             <!-- <div class="card mb-4">
                 <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
@@ -79,7 +89,7 @@
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                             <a class="btn btn-primary" href="#!">Read more →</a>
                         </div>
-                    </div> -->
+                    </div>  -->
                     <!-- Blog post-->
                     <!-- <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
