--- a/ProyectoFinal/blog/templates/blog/post_details.html
+++ b/ProyectoFinal/blog/templates/blog/post_details.html
@@ -14,6 +14,14 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
                     </ul>
+                    <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
+
+                        {% csrf_token %}
+
+                                    <input class="form-control" type="text" placeholder="Buscar post..." aria-label="Buscar post..." aria-describedby="button-search" name="searched" />
+                                    <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
+
+                    </form>
                 </div>
                 
     </div>
