--- a/ProyectoFinal/blog/templates/blog/resultadoBuscar.html
+++ b/ProyectoFinal/blog/templates/blog/resultadoBuscar.html
@@ -14,6 +14,14 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
                     </ul>
+                    <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
+
+                        {% csrf_token %}
+
+                                    <input class="form-control" type="text" placeholder="Buscar post..." aria-label="Buscar post..." aria-describedby="button-search" name="searched" />
+                                    <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
+
+                    </form>
                 </div>
                 
     </div>
@@ -31,7 +39,7 @@
     <br/>
     {% for post in posts %}
 
-        <a href="{% url 'post-details' post.pk %}">{{post.title}}</a> <br/>
+        <a href="{% url 'post-details' post.slug %}">{{post.title}}</a> <br/>
 
     {% endfor %}
 
