--- a/ProyectoFinal/blog/templates/blog/base.html
+++ b/ProyectoFinal/blog/templates/blog/base.html
@@ -22,6 +22,7 @@
         {% block search %} {% endblock search %}
         {% block crearpost %} {%endblock crearpost %}
         {% block busqueda %} {% endblock busqueda %}
+        {% block login %} {% endblock login %}
             </div>
         </div>
         
