Adding login and signup

--- a/ProyectoFinal/blog/templates/blog/index.html
+++ b/ProyectoFinal/blog/templates/blog/index.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'inicio' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                     </ul>
                     <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
 
