--- a/ProyectoFinal/blog/templates/blog/signup.html
+++ b/ProyectoFinal/blog/templates/blog/signup.html
@@ -38,13 +38,10 @@
 
         {{form.as_p}}
 
-        <button type="submit">Iniciar Sesion</button>
-
-        <p>Si no tenes usuario, registrate haciendo click <a href="{% url 'signup' %}"> aca</a></p>
+        <button type="submit">Registrarse</button>
 
 
     </form>
 </body>
-
 
 {% endblock pagecontent %}
