--- a/ProyectoFinal/blog/templates/blog/about.html
+++ b/ProyectoFinal/blog/templates/blog/about.html
@@ -31,6 +31,31 @@
 
 {% block enconstruccion %}
 
-<h1>EN CONSTRUCCION</h1>
+<!-- Header -->
+<header class="bg-primary text-center py-5 mb-4">
+    <div class="container">
+      <h1 class="fw-light text-white">About me</h1>
+    </div>
+  </header>
+  
+  <!-- Page Content -->
+  <div class="container">
+    <div class="row">
+      <!-- Team Member 1 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+          <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHQUWSx43giTg/profile-displayphoto-shrink_800_800/0/1550683938508?e=1650499200&v=beta&t=EAbGHt5Nqaw4iy2-OIofuNBXyt0vaRlQXnrbEDDzAwc" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0">Matias Eguez Leone</h5>
+            <div class="card-text text-black-50">Cloud Engineer Jr</div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.row -->
+  
+  </div>
+  <!-- /.container -->
 
 {% endblock enconstruccion %}
