--- a/ProyectoFinal/blog/templates/blog/editarPost.html
+++ b/ProyectoFinal/blog/templates/blog/editarPost.html
@@ -32,7 +32,7 @@
 {% endblock navbar %}
 
 {% block crearpost %}
-<h1>Crea tu post</h1>
+<h1>Editar post</h1>
 
 <form action="" method='POST'>{% csrf_token %}
 
@@ -46,7 +46,7 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
             {{form|crispy}}
-            <button type="submit">Crear Post</button>
+            <button type="submit">Actualizar Post</button>
         </form>
 
 </form>
