--- a/ProyectoFinal/blog/templates/blog/about.html
+++ b/ProyectoFinal/blog/templates/blog/about.html
@@ -12,7 +12,17 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a></li>
+                        {% if user.is_authenticated %}
+
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
+
+                        {% else %}
+
+                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
+
+                        {% endif %}
                     </ul>
                     <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
 
