--- a/ProyectoFinal/blog/templates/blog/editarPost.html
+++ b/ProyectoFinal/blog/templates/blog/editarPost.html
@@ -14,7 +14,17 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'creapost' %}">Crear Post</a></li>
+                        {% if user.is_authenticated %}
+
+                        <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
+
+                        {% else %}
+
+                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
+
+                        {% endif %}
                     </ul>
                     <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
 
@@ -32,22 +42,31 @@
 {% endblock navbar %}
 
 {% block crearpost %}
-<h1>Editar post</h1>
 
-<form action="" method='POST'>{% csrf_token %}
+{% if user.is_authenticated %}
+    <h1>Editar post</h1>
 
-    <table>
+    <form action="" method='POST'>{% csrf_token %}
 
-        {{formularioPost|crispy}}
+        <table>
+            {{formularioPost.media}}
+            {{formularioPost|crispy}}
 
-    </table>
+        </table>
 
-    <!-- <input type="submit", value='Enviar'> -->
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-            {{form|crispy}}
-            <button type="submit">Actualizar Post</button>
-        </form>
+        <!-- <input type="submit", value='Enviar'> -->
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+                
+                {{form|crispy}}
+                <button type="submit">Actualizar Post</button>
+            </form>
 
+{% else %}
+    
+    <h3>Tenes que iniciar sesion para poder editar un post!</h3>
+
+{% endif %}
+    
 </form>
 {%endblock crearpost %}
