--- a/ProyectoFinal/login/templates/registration/edit_profile.html
+++ b/ProyectoFinal/login/templates/registration/edit_profile.html
@@ -12,7 +12,19 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'inicio' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+                        {% if user.is_authenticated %}
+
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'edit_profile' %}">Editar Perfil</a></li>
+                        
+
+                        {% else %}
+
+                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
+
+                        {% endif %}
                     </ul>
                     <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
 
@@ -32,9 +44,18 @@
 {% block pagecontent %}
 
 <body>
-    
-    <h3>Deslogueado con exito, volver a <a href="{% url 'inicio' %}">inicio</a></h3>
+    <div class = "form-group">
+        <form action="" method = 'POST'>
 
+            {% csrf_token %}
+
+            {{form.as_p}}
+
+            <button type="submit">Actualizar perfil</button>
+
+
+        </form>
+    </div>
 </body>
 
 {% endblock pagecontent %}
