--- a/ProyectoFinal/login/templates/registration/login.html
+++ b/ProyectoFinal/login/templates/registration/login.html
@@ -40,7 +40,7 @@
 
         <button type="submit">Iniciar Sesion</button>
 
-        <p>Si no tenes usuario, registrate haciendo click <a href="{% url 'signup' %}"> aca</a></p>
+        <p>Si no tenes usuario, registrate haciendo click <a href="{% url 'register' %}"> aca</a></p>
 
 
     </form>
