--- a/ProyectoFinal/blog/templates/blog/creapost.html
+++ b/ProyectoFinal/blog/templates/blog/creapost.html
@@ -16,7 +16,8 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                         {% if user.is_authenticated %}
 
-                        <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'edit_profile' %}">Editar Perfil</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
 
                         {% else %}
@@ -48,7 +49,7 @@
 
     <div class = "form-group">
 
-        <form action="" method='POST'>{% csrf_token %}
+        <form action="" method='POST' enctype='multipart/form-data'>{% csrf_token %}
 
             <table>
                 {{formularioPost.media}}
