--- a/ProyectoFinal/blog/templates/blog/eliminarPost.html
+++ b/ProyectoFinal/blog/templates/blog/eliminarPost.html
@@ -17,6 +17,7 @@
                         {% if user.is_authenticated %}
 
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'edit_profile' %}">Editar Perfil</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
 
                         {% else %}
