--- a/ProyectoFinal/blog/templates/blog/index.html
+++ b/ProyectoFinal/blog/templates/blog/index.html
@@ -30,8 +30,8 @@
                         {% if user.is_authenticated %}
 
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'edit_profile' %}">Editar Perfil</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
                         
 
                         {% else %}
@@ -67,12 +67,12 @@
     <div class="row">
         <div class="col-lg-8">
 <div class="card mb-4">
-    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+    <a href="#!"></a><img class="card-img-top" src="{{post.thumbnail.url}}" alt="..." /></a>
     <div class="card-body">
         <div class="small text-muted">{{post.created_date}}</div>
         <h2 class="card-title h4">{{post.title}}</h2>
         <p class="card-text">{{post.content|truncatechars:100|safe}}</p>
-        <a class="btn btn-primary" href="{% url 'post-details' post.slug  %}">Mas info →</a>
+        <a class="btn btn-primary" href="{% url 'post-details' post.slug  %}">Leer mas →</a>
         {% if user.is_authenticated %}
         <a class="btn btn-primary" href="{% url 'editarPost' post.slug  %}">Editar post</a>
         <a class="btn btn-primary" href="{% url 'borrarPost' post.slug  %}">Borrar post</a>
@@ -87,105 +87,15 @@
     <div class="row">
         <!-- Blog entries-->
         <div class="col-lg-8">
-            <!-- Featured blog post-->
-            <!-- <div class="card mb-4">
-                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                <div class="card-body">
-                    <div class="small text-muted">January 1, 2021</div>
-                    <h2 class="card-title">Featured Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a class="btn btn-primary" href="#!">Read more →</a>
-                </div>
-            </div> -->
-            <!-- Nested row for non-featured blog posts-->
-            <!-- <div class="row">
-                <div class="col-lg-6"> -->
-                    <!-- Blog post-->
-                    <!-- <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2021</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div>  -->
-                    <!-- Blog post-->
-                    <!-- <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2021</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6"> -->
-                    <!-- Blog post-->
-                    <!-- <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2021</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div> -->
-                    <!-- Blog post-->
-                    <!-- <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2021</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <!-- Pagination-->
-            <nav aria-label="Pagination">
-                <hr class="my-0" />
-                <ul class="pagination justify-content-center my-4">
-                    <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                    <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                    <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-                </ul>
-            </nav>
+   
+
         </div>
 
 {% endblock pagecontent %}
 
 {% block search %}
 
-                <!-- Side widgets-->
-                <!-- <div class="col-lg-4"> -->
-                    <!-- Search widget-->
-                    <!-- <form class="d-flex" method="POST" action="{% url 'resultadoBusqueda' %}">
 
-                        {% csrf_token %}
-
-                                    <input class="form-control" type="text" placeholder="Buscar post..." aria-label="Buscar post..." aria-describedby="button-search" name="searched" />
-                                    <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
-
-                    </form> -->
-                    <!-- <div class="card mb-4">
-                        <div class="card-header">Search</div>
-                        <div class="card-body">
-                            <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                            </div>
-                        </div>
-                    </div> -->
-                    
-
-                <!-- </div> -->
 
 {% endblock search %}
 
