--- a/ProyectoFinal/blog/templates/blog/post_details.html
+++ b/ProyectoFinal/blog/templates/blog/post_details.html
@@ -15,6 +15,7 @@
                         {% if user.is_authenticated %}
 
                         <li class="nav-item"><a class="nav-link" href="{% url 'creapost' %}">Crear Post</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'edit_profile' %}">Editar Perfil</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a></li>
 
                         {% else %}
@@ -42,6 +43,8 @@
 {% block pagecontent %}
 
 <h1>{{post.title}}</h1>
+
+<img src="{{post.thumbnail.url}}" alt="">
 
 <p>{{post.content|safe}}</p>
 
