--- a/ProyectoFinal/login/templates/registration/register.html
+++ b/ProyectoFinal/login/templates/registration/register.html
@@ -19,7 +19,7 @@
 
                         {% else %}
 
-                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'register' %}">Registrarse</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesion</a></li>
 
                         {% endif %}
